Lab2_RecursiveParser/Grammar
expression       -> FUN + expressionTail
expressionTail   -> NAME + parametersWithBrackets + returnExpression

returnExpression -> COLON + type
returnExpression -> EPS

parametersWithBrackets -> LB + RB
parametersWithBrackets -> LB + NAME + colonTypeParamTail

colonTypeParamTail     -> COLON + type + parametersTail

parametersTail         -> RB
parametersTail         -> COMMA + NAME + colonTypeParamTail

type             -> TYPE + typeTail

typeTail         -> < + type + >
typeTail         -> EPS

FUN   = "fun"
COLON = ":"
EPS   = ""
COMMA = ","
LB    = "("
RB    = ")"
L_TR_B = "<"
R_TR_B = ">"

TYPE  = <type>
NAME  = <name>

| FIRST |
expression:             FUN, NAME
expressionTail:         NAME
returnExpression:       COLON, EPS
parametersWithBrackets: LB
parametersTail:         RB, COMMA
colonTypeParamTail:     COLON

| FOLLOW |

expression:             END
expressionTail:         END
returnExpression:       END
parametersWithBrackets: END, COLON
parametersTail:         RB
colonTypeParamTail:     RB
